--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.dropdown-btn {
+  @apply flex items-center justify-center w-full py-2 px-3 rounded-lg text-sm text-gray-800 focus:ring-2 focus:ring-blue-500 dark:text-gray-300 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600 flex items-center justify-center w-full py-2 px-3 rounded-lg text-sm text-gray-800 focus:ring-2 focus:ring-blue-500 dark:text-gray-300 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600;
+}
+.btn{
+  @apply py-1.5 px-2 inline-flex justify-center items-center gap-2 rounded-lg text-gray-700 align-middle disabled:opacity-50 disabled:pointer-events-none focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-white focus:ring-blue-600 transition-all text-sm dark:text-gray-400 dark:hover:text-white dark:focus:ring-offset-gray-800;
+}
+.dropdown-btn-danger{
+  @apply flex items-center justify-center w-full py-2 px-3 rounded-lg text-sm text-gray-800  focus:ring-2 focus:ring-red-500 dark:text-gray-300 dark:focus:outline-none dark:focus:ring-1 dark:focus:ring-gray-600;
+}
